fix: delete gap between sidebar items

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -45,7 +45,7 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 0;
   flex: 1;
 
   width: 59px;
@@ -67,9 +67,9 @@
 .sub-menu {
   display: flex;
   flex-direction: column;
-  gap: 4px; 
+  gap: 0; 
   padding-left: 12px;
-  margin-top: 4px;
+  margin-top: 0;
   transition: all 0.3s ease;
 }
 
